--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Erica Delagnier"
 title: "Erica Delagnier"
-description: "Software Craftwoman. Lingq enthusiast"
+description: "Software Craftwoman"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl:
